--- a/Gudena.Api/appsettings.json
+++ b/Gudena.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=bdx9ftw4a5fc6ez7vubi-postgresql.services.clever-cloud.com;Port=50013;Database=bdx9ftw4a5fc6ez7vubi;Username=uxes4wggvxt1lr0q7ft8;Password=t269iZnsBu8v6ArOUSIh6z0LwiG5vY"
   },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyThatShouldBeLongEnough",
+    "Issuer": "GudenaApi",
+    "Audience": "GudenaUsers",
+    "DurationInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
