Renamed SellerId in OrderShippingDto and moved it to DTOs/Order

--- a/Gudena.Api/appsettings.json
+++ b/Gudena.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=bdx9ftw4a5fc6ez7vubi-postgresql.services.clever-cloud.com;Port=50013;Database=bdx9ftw4a5fc6ez7vubi;Username=uxes4wggvxt1lr0q7ft8;Password=t269iZnsBu8v6ArOUSIh6z0LwiG5vY"
+    "DefaultConnection": "Host=bdx9ftw4a5fc6ez7vubi-postgresql.services.clever-cloud.com;Port=50013;Database=bdx9ftw4a5fc6ez7vubi;Username=uxes4wggvxt1lr0q7ft8;Password=t269iZnsBu8v6ArOUSIh6z0LwiG5vY",
+    "TestConnection": "Host=bs96klalwa2d33nvwjw1-postgresql.services.clever-cloud.com;Port=50013;Database=bs96klalwa2d33nvwjw1;Username=u37fwesbqcpjkoerxhq7;Password=Pe1WsrbOZ0TgGHW3Qoe2spCY3Zyrv7"
   },
   "Jwt": {
     "Key": "ThisIsASecretKeyThatShouldBeLongEnough",
