--- a/Gudena.Tests/Gudena.Tests.csproj
+++ b/Gudena.Tests/Gudena.Tests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <RootNamespace>GudenaPortal.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
